Replaced Base64 class